--- a/src/app/Paginas/Body/backup/budgets/budgets.component.html
+++ b/src/app/Paginas/Body/backup/budgets/budgets.component.html
@@ -4,44 +4,141 @@
   color="#fff"
   type="ball-scale-multiple"
 >
-  <p style="font-size: 20px; color: white">{{msj}}</p>
+  <p style="font-size: 20px; color: white">{{util.msjLoading}}</p>
 </ngx-spinner>
 
 <div class="container text-center" *ngIf="budgetService.Budgets.length == 0" style="margin-top: 200px;">
-  <h2 class="font-weight-lighter">El Backup no tiene budgets relacionados</h2>
+  <h2 class="font-weight-lighter">util.msj</h2>
 </div>
-<div *ngIf="budgetService.Budgets.length > 0">
-  <table class="table table-hover">
+<div *ngIf="budgetService.Budgets.length > 0" class="overflow-x-scroll">
+  <table class="table table-hover table-fixed-xl">
     <thead class="thead-dark">
     <tr>
-      <th scope="col" class="Encabezado-Tabla">#</th>
-      <th scope="col" class="Encabezado-Tabla">id_account</th>
-      <th scope="col" class="Encabezado-Tabla">id_category</th>
-      <th scope="col" class="Encabezado-Tabla">period</th>
-      <th scope="col" class="Encabezado-Tabla">amount</th>
-      <th scope="col" class="Encabezado-Tabla">budget</th>
-      <th scope="col" class="Encabezado-Tabla">initial_date</th>
-      <th scope="col" class="Encabezado-Tabla">final_date</th>
-      <th scope="col" class="Encabezado-Tabla">number</th>
-      <th scope="col" class="Encabezado-Tabla">Operación</th>
-    </thead>
-    <tbody>
-    <tr *ngFor="let budget of budgetService.Budgets; let i = index" >
-      <th scope="row" class="Celdas-Tabla">{{(i+1)}}</th>
-      <td class="Celdas-Tabla">{{util.asignarNombre(budget.id_account, budget.account)}}</td>
-      <td class="Celdas-Tabla">{{util.asignarNombre(budget.id_category, budget.category)}}</td>
-      <td class="Celdas-Tabla">{{budget.period}}</td>
-      <td class="Celdas-Tabla">{{budget.amount | currency: budget.symbol}}</td>
-      <td class="Celdas-Tabla">{{budget.budget | currency: budget.symbol}}</td>
-      <td class="Celdas-Tabla">{{(budget.initial_date == "0000-00-00") ? "Sin fecha" : budget.initial_date | date: 'dd/MMMM/yyyy'}}</td>
-      <td class="Celdas-Tabla">{{(budget.final_date == "0000-00-00") ? "Sin fecha" : budget.final_date | date: 'dd/MMMM/yyyy'}}</td>
-      <td class="Celdas-Tabla">{{budget.number}}</td>
-      <td class="Celdas-Tabla">
-        <button type="button" class="btn btn-primary" style="width: 100px; margin-right: 20px; font-size: 20px" >Editar</button>
-        <button type="button" class="btn btn-danger" style="width: 100px; margin-left: 20px; font-size: 20px" (click)="eliminar(i, back.id_backup)">Eliminar</button>
-      </td>
+      <th scope="col" class="Encabezado-Tabla width-9">#</th>
+      <th scope="col" class="Encabezado-Tabla width-9">Repeated</th>
+      <th scope="col" class="Encabezado-Tabla width-9">
+        <div class="row inline-grid">
+          Account
+          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="budgetService.filtersSearch.indexAccount.value" name="indexAccount" (ngModelChange)="budgetService.actionFilterEvent($event, 'indexAccount')">
+            <option value="-1" *ngIf="budgetService.AccountsBackup.length > 0">Todas</option>
+            <option *ngFor="let account of budgetService.AccountsBackup; let i = index" [value]="i">{{account.name}}</option>
+          </select>
+          <button type="button" [ngClass]="(budgetService.filtersSearch.indexAccount.isFilter) ? 'close': 'btnFilter-disabled'" (click)="budgetService.resetValuefiltroSearch('indexAccount')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
+      <th scope="col" class="Encabezado-Tabla width-9">
+        <div class="row inline-grid">
+          Category
+          <select class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="budgetService.filtersSearch.id_category.value" name="id_category" (ngModelChange)="budgetService.actionFilterEvent($event, 'id_category')">
+            <ng-container *ngIf="util.numberFormat(budgetService.filtersSearch.indexAccount.value) == -1">
+              <option value="0">Todas</option>
+              <ng-container *ngFor="let account of budgetService.AccountsBackup">
+                <option *ngFor="let category of account.categoriesAccount" [value]="category.id_category">{{category.name}}</option>
+              </ng-container>
+            </ng-container>
+            <ng-container *ngIf="util.numberFormat(budgetService.filtersSearch.indexAccount.value) != -1">
+              <option value="0" *ngIf="budgetService.AccountsBackup[util.numberFormat(budgetService.filtersSearch.indexAccount.value)].categoriesAccount.length > 0">Todos</option>
+              <option *ngFor="let category of budgetService.AccountsBackup[util.numberFormat(budgetService.filtersSearch.indexAccount.value)].categoriesAccount;" [value]="category.id_category">{{category.name}}</option>
+            </ng-container>
+          </select>
+          <button type="button" [ngClass]="(budgetService.filtersSearch.id_category.isFilter) ? 'close': 'btnFilter-disabled'" (click)="budgetService.resetValuefiltroSearch('id_category')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
+      <th scope="col" class="Encabezado-Tabla width-9">Period</th>
+      <th scope="col" class="Encabezado-Tabla width-9">
+        <div class="row inline-grid">
+          Amount
+          <input type="text" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="budgetService.filtersSearch.amount.value" name="amount" (keyup)="budgetService.actionFilterEvent($event, 'amount', true)">
+          <button type="button" [ngClass]="(budgetService.filtersSearch.amount.isFilter) ? 'close': 'btnFilter-disabled'" (click)="budgetService.resetValuefiltroSearch('amount')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
+      <th scope="col" class="Encabezado-Tabla width-9">
+        <div class="row inline-grid">
+          Budget
+          <input type="text" class="form-control mr-sm-2 form-control-md input-header" [(ngModel)]="budgetService.filtersSearch.budget.value" name="budget" (keyup)="budgetService.actionFilterEvent($event, 'budget', true)">
+          <button type="button" [ngClass]="(budgetService.filtersSearch.budget.isFilter) ? 'close': 'btnFilter-disabled'" (click)="budgetService.resetValuefiltroSearch('budget')">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+      </th>
+      <th scope="col" class="Encabezado-Tabla width-9">Initial_date</th>
+      <th scope="col" class="Encabezado-Tabla width-9">Final_date</th>
+      <th scope="col" class="Encabezado-Tabla width-9">Number</th>
+      <th scope="col" class="Encabezado-Tabla width-9">Operación</th>
     </tr>
-
+    </thead>
+    <tbody *ngIf="!budgetService.isFilter()">
+      <tr *ngFor="let budget of budgetService.Budgets; let i = index" >
+        <td scope="row" class="Celdas-Tabla font-weight-bold width-9">{{(i+1)}}</td>
+        <td class="Celdas-Tabla font-italic width-9">{{budget.repeated}}</td>
+        <td class="Celdas-Tabla width-9">{{util.asignarNombre(budget.id_account, budget.nameAccount)}}</td>
+        <td class="Celdas-Tabla width-9">{{util.asignarNombre(budget.id_category, budget.nameCategory)}}</td>
+        <td class="Celdas-Tabla width-9">{{budget.period}}</td>
+        <td class="Celdas-Tabla width-9">{{budget.amount | currency: budget.symbol}}</td>
+        <td class="Celdas-Tabla width-9">{{budget.budget | currency: budget.symbol}}</td>
+        <td class="Celdas-Tabla width-9">{{(budget.initial_date == '0000-00-00') ? budget.initial_date : budget.initial_date  | date: 'dd/MMMM/yyyy'}}</td>
+        <td class="Celdas-Tabla width-9">{{(budget.final_date == '0000-00-00') ? budget.final_date : budget.final_date | date: 'dd/MMMM/yyyy'}}</td>
+        <td class="Celdas-Tabla width-9">{{budget.number}}</td>
+        <td class="Celdas-Tabla width-9">
+          <button type="button" class="btn btn-primary btn-update" data-toggle="modal" data-target="#modalAutomatic" (click)="accionBudget(util.ACTUALIZAR, budget, i)">
+            <span>
+              <fa-icon [icon]="util.faPen"></fa-icon>
+            </span>
+          </button>
+          <button type="button" class="btn btn-danger btn-delete" data-toggle="modal" data-target="#modalAutomatic" (click)="accionBudget(util.ELIMINAR, budget, i)">
+            <span>
+              <fa-icon [icon]="util.faTrash"></fa-icon>
+            </span>
+          </button>
+        </td>
+      </tr>
+      <div
+        [fromRoot]="true"
+        infiniteScroll
+        [infiniteScrollDistance]="2"
+        infiniteScrollContainer=".table-fixed-xl tbody"
+        (scrolled)="onScroll()">
+      </div>
+      <loading-spinner *ngIf="util.loadingMain"></loading-spinner>
+      <query-complete *ngIf="util.QueryComplete.isComplete" [msj]="util.QueryComplete.msj"></query-complete>
+    </tbody>
+    <tbody *ngIf="budgetService.isFilter()">
+      <tr *ngFor="let budget of budgetService.budgetsFilter; let i = index" >
+        <td scope="row" class="Celdas-Tabla font-weight-bold width-9">{{(i+1)}}</td>
+        <td class="Celdas-Tabla font-italic width-9">{{budget.repeated}}</td>
+        <td class="Celdas-Tabla width-9">{{util.asignarNombre(budget.id_account, budget.nameAccount)}}</td>
+        <td class="Celdas-Tabla width-9">{{util.asignarNombre(budget.id_category, budget.nameCategory)}}</td>
+        <td class="Celdas-Tabla width-9">{{budget.period}}</td>
+        <td class="Celdas-Tabla width-9">{{budget.amount | currency: budget.symbol}}</td>
+        <td class="Celdas-Tabla width-9">{{budget.budget | currency: budget.symbol}}</td>
+        <td class="Celdas-Tabla width-9">{{budget.initial_date  | date: 'dd/MMMM/yyyy'}}</td>
+        <td class="Celdas-Tabla width-9">{{budget.final_date | date: 'dd/MMMM/yyyy'}}</td>
+        <td class="Celdas-Tabla width-9">{{budget.number}}</td>
+        <td class="Celdas-Tabla width-9">
+          <button type="button" class="btn btn-primary btn-update" data-toggle="modal" data-target="#modalAutomatic" (click)="accionBudget(util.ACTUALIZAR, budget, i)">
+              <span>
+                <fa-icon [icon]="util.faPen"></fa-icon>
+              </span>
+          </button>
+          <button type="button" class="btn btn-danger btn-delete" data-toggle="modal" data-target="#modalAutomatic" (click)="accionBudget(util.ELIMINAR, budget, i)">
+              <span>
+                <fa-icon [icon]="util.faTrash"></fa-icon>
+              </span>
+          </button>
+        </td>
+      </tr>
     </tbody>
   </table>
 </div>
+
+<button type="button" class="btn btn-success rounded-circle addButton" (click)="accionBudget(util.AGREGAR)">
+  <span>
+    <fa-icon [icon]="util.faPlus"></fa-icon>
+  </span>
+</button>
