Budgets Backup terminado

--- a/src/app/Paginas/Body/backup/automatics/automatics.component.html
+++ b/src/app/Paginas/Body/backup/automatics/automatics.component.html
@@ -157,7 +157,7 @@
 </div>
 <!-- ------------------------------------------------------------------------------------------------------ -->
 <div class="container text-center" *ngIf="automaticService.Automatics.length == 0" style="margin-top: 200px;">
-  <h2 class="font-weight-lighter">util.msj</h2>
+  <h2 class="font-weight-lighter">{{util.msj}}</h2>
 </div>
 <div *ngIf="automaticService.Automatics.length > 0"  class="overflow-x-scroll">
   <table class="table table-hover table-fixed-xl">
