--- a/src/app/Paginas/Body/backup/automatics/automatics.component.html
+++ b/src/app/Paginas/Body/backup/automatics/automatics.component.html
@@ -7,7 +7,7 @@
   <p style="font-size: 20px; color: white">{{util.msjLoading}}</p>
 </ngx-spinner>
 <!-- ------------------------------------------------------------------------------------------------------ -->
-<div class="modal fade" id="modalAutomatic" tabindex="-1" role="dialog" aria-labelledby="modalAutomaticTitle" aria-hidden="true" data-keyboard="false" data-backdrop="static" *ngIf="option != ''">
+<div class="modal fade" id="modalAutomatic" tabindex="-1" role="dialog" aria-labelledby="modalAutomaticTitle" aria-hidden="true" data-keyboard="false" data-backdrop="static" *ngIf="automatic != null">
   <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
